--- a/keydates.html
+++ b/keydates.html
@@ -1761,6 +1761,15 @@
 														<li>Notification to authors: Friday, September 26, 2025</li>
 													</ul>
 
+													<h4><strong>REU Symposium</strong></h4>
+													<ul>
+
+														<li>Paper submission due date: Monday, September 1, 2025</li>
+														<li>Decision notification: October 1, 2025</li>
+														<li>Camera-ready due date: October 15, 2025</li>
+														<li>Symposium: one day in November 12-15, 2025</li>
+													</ul>
+
 													<h4><strong>Undergraduate and High School Symposium</strong></h4>
 													<ul>
 
