--- a/cfn_developing.html
+++ b/cfn_developing.html
@@ -1555,7 +1555,7 @@
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
                                         <a href="cfp.html"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
-                                            Call for nominations 
+                                            Call for Nominations 
                                             <!-- of 2025 IEEE ICDM Research Contributions and
                                             Outstanding Service Awards -->
                                         </a>
@@ -1734,7 +1734,7 @@
 
 
                                                 <div class="et_pb_text_inner">
-                                                    <h4><strong>Call for nominations</strong></h4>
+                                                    <h4><strong>Call for Nominations</strong></h4>
 
                                                     <p>
                                                         Nominations due by August 15, 2025</p>
