--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -1602,6 +1602,16 @@
                                         </a>
                                     </li>
 
+                                    <li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="cfn.html"
+                                            style="display: block; min-width: 350px; padding: 10px 20px;">
+                                            Call for ICDM Award Nomination
+                                            <!-- of 2025 IEEE ICDM Research Contributions and
+                                            Outstanding Service Awards -->
+                                        </a>
+                                    </li>
+
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
 										<a href="https://bigdatareu.umbc.edu/reu-symposium/reu-symposium-2025/"
 										   style="display: block; min-width: 350px; padding: 10px 20px;" target="_blank">
