--- a/workshops.html
+++ b/workshops.html
@@ -12,7 +12,7 @@
 		document.documentElement.className = 'js';
 	</script>
 
-	<title>Call for Papers | IEEE International Conference on Data Mining 2025 (ICDM2025) | IEEE ICDM 2025</title>
+	<title>Workshops | IEEE International Conference on Data Mining 2025 (ICDM2025) | IEEE ICDM 2025</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
 	<meta name='robots' content='max-image-preview:large' />
 	<script type="text/javascript">
@@ -1552,6 +1552,16 @@
                                         </a>
                                     </li>
 
+									<li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="cfn.html"
+                                            style="display: block; min-width: 350px; padding: 10px 20px;">
+                                            Call for ICDM Award Nomination
+                                            <!-- of 2025 IEEE ICDM Research Contributions and
+                                            Outstanding Service Awards -->
+                                        </a>
+                                    </li>
+
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
 										<a href="https://bigdatareu.umbc.edu/reu-symposium/reu-symposium-2025/"
 											style="display: block; min-width: 350px; padding: 10px 20px;"
@@ -1786,7 +1796,8 @@
 
 														
 
-														<li>DMF: 3rd International Workshop on Data Mining in Finance (DMF2025)</li>
+														<li><a
+																href="https://sites.google.com/view/dmf-2025">DMF</a>: 3rd International Workshop on Data Mining in Finance (DMF2025)</li>
 
 														<li><a
 																href="https://www2.kansai-u.ac.jp/dslab/workshop/2025/DMS2025/">DMS2025</a>:
