--- a/cfn.html
+++ b/cfn.html
@@ -1553,11 +1553,9 @@
 
                                     <li
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
-                                        <a href="cfp.html"
-                                            style="display: block; min-width: 300px; padding: 10px 20px;">
-                                            Call for Nominations 
-                                            <!-- of 2025 IEEE ICDM Research Contributions and
-                                            Outstanding Service Awards -->
+                                        <a href="cfn.html"
+                                            style="display: block; min-width: 350px; padding: 10px 20px;">
+                                            Call for ICDM Award Nomination
                                         </a>
                                     </li>
 
