--- a/cfbtp.html
+++ b/cfbtp.html
@@ -1850,9 +1850,9 @@
 
                                                     <h4><strong>Important Dates</strong></h4>
 
-                                                    <li>Paper submission: July 15, 2025 </li>
-                                                    <li>Notification to authors: September 15, 2025 </li>
-                                                    <li>Camera-ready submission: September 25, 2025</li>
+                                                    <li>Submission Deadline: August 1st, 2025 </li>
+                                                    <li>Notification Deadline: September 30, 2025 </li>
+                                                    <li>Camera-Ready Deadline: October 15, 2025</li>
                                                     <p>All submission deadlines are end-of-day in the Anywhere on Earth
                                                         (AoE) time zone.</p>
 
