--- a/keynotes.html
+++ b/keynotes.html
@@ -12,7 +12,7 @@
         document.documentElement.className = 'js';
     </script>
 
-    <title>Call for Papers | IEEE International Conference on Data Mining 2025 (ICDM2025) | IEEE ICDM 2025</title>
+    <title>Keynotes | IEEE International Conference on Data Mining 2025 (ICDM2025) | IEEE ICDM 2025</title>
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <meta name='robots' content='max-image-preview:large' />
     <script type="text/javascript">
@@ -1603,7 +1603,7 @@
                                     </li>
 
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
-                                        <a href="keynotes_developing.html"
+                                        <a href="keynotes.html"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Keynotes
                                         </a>
