--- a/cfbtp.html
+++ b/cfbtp.html
@@ -1602,6 +1602,14 @@
                                             Workshops
                                         </a>
                                     </li>
+
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="keynotes.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Keynotes
+                                        </a>
+                                    </li>
+
                                 </ul>
 
                             </li>
