--- a/registration.html
+++ b/registration.html
@@ -1607,6 +1607,14 @@
 											Workshops
 										</a>
 									</li>
+
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="keynotes.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Keynotes
+                                        </a>
+                                    </li>
+
 								</ul>
 
 							</li>
