--- a/keynotes.html
+++ b/keynotes.html
@@ -1756,16 +1756,16 @@
                                                         Computer Science, Biomedical Engineering, and Data Science</p>
 
                                                     <div>
-                                                        <p>&nbsp;</p>
+                                                        <!-- <p>&nbsp;</p>
                                                         <p><strong><span style="font-size: +2;">Title: TBA</span></strong>
                                                         </p>
-                                                        <!-- <p><strong>Abstract</strong></p>
+                                                        <p><strong>Abstract</strong></p>
                                                         <p></p>
                                                         <p></p>
-                                                        <p>&nbsp;</p> -->
+                                                        <p>&nbsp;</p>
 
                                                         <p><strong>Bio: TBA</strong></p>
-                                                        <!-- <p>
+                                                        <p>
                                                             </p>
                                                         <p>&nbsp;</p> -->
                                                     </div>
@@ -1805,18 +1805,16 @@
                                                 <div class="et_pb_team_member_description">
                                                     <a href="https://hsph.harvard.edu/profile/john-quackenbush/" target="_blank"><h4 class="et_pb_module_header">John Quackenbush</h4></a>
                                                     
-                                                    <p class="et_pb_member_position">Professor of Computational Biology
-                                                        and Bioinformatics<br>
-                                                        Biostatistics, Harvard T.H. Chan School of Public Health</p>
+                                                    <p class="et_pb_member_position">Chair, Department of Biostatistics, and Henry Pickering Walcott Professor of Computational Biology and Bioinformatics, Harvard T.H. Chan School of Public Health; Professor, Department of Data Science, Dana-Farber Cancer Institute; Professor, Channing Division of Network Medicine, Brigham and Women’s Hospital</p>
                                                     <div>&nbsp;</p>
-                                                        <p><strong><span style="font-size: +2;">Title: TBA</span></strong>
+                                                        <!-- <p><strong><span style="font-size: +2;">Title: TBA</span></strong>
                                                         </p>
-                                                        <!-- <p><strong>Abstract</strong></p>
+                                                        <p><strong>Abstract</strong></p>
                                                         <p></p>
-                                                        <p>&nbsp;</p> -->
+                                                        <p>&nbsp;</p>
 
                                                         <p><strong>Bio: TBA</strong></p>
-                                                        <!-- <p>
+                                                        <p>
                                                         </p>
                                                         <p>&nbsp;</p> -->
                                                     </div>
@@ -1858,13 +1856,13 @@
                                                     <p class="et_pb_member_position">Professor of Computer Science,
                                                         Stanford University</p>
                                                     <div>
-                                                        <p>​</p>
+                                                        <!-- <p>​</p>
                                                         <p><strong><span style="font-size: +2;">Title: TBA</span></strong></p>
-                                                        <!-- <p><strong>Abstract</strong></p>
+                                                        <p><strong>Abstract</strong></p>
                                                         <p></p>
-                                                        <p>&nbsp;</p> -->
+                                                        <p>&nbsp;</p>
                                                         <p><strong>Bio: TBA</strong></p>
-                                                        <!-- <p></p>
+                                                        <p></p>
                                                         <p>&nbsp;</p>
                                                         <p>&nbsp;</p> -->
                                                     </div>
