--- a/keynotes.html
+++ b/keynotes.html
@@ -1764,18 +1764,18 @@
                                                         Computer Science, Biomedical Engineering, and Data Science</p>
 
                                                     <div>
-                                                        <!-- <p>&nbsp;</p>
-                                                        <p><strong><span style="font-size: +2;">Title: TBA</span></strong>
+                                                        <p>&nbsp;</p>
+                                                        <!-- <p><strong><span style="font-size: +2;">Title: TBA</span></strong>
                                                         </p>
                                                         <p><strong>Abstract</strong></p>
                                                         <p></p>
                                                         <p></p>
-                                                        <p>&nbsp;</p>
-
-                                                        <p><strong>Bio: TBA</strong></p>
-                                                        <p>
-                                                            </p>
                                                         <p>&nbsp;</p> -->
+
+                                                        <p><strong>Bio:</strong></p>
+                                                        <p>The past decade has been a very exciting time for machine learning (ML) research. Significant research effort has focused on improving predictive performance of Deep Neural Networks (DNN) by proposing increasingly complex architectures which have surpassed even human-level performance. Even though these methods demonstrate incredible potential in saving valuable man-hours and minimizing inadvertent human mistakes, their adoption has been met with rightful skepticism and extreme circumspection in critical applications such as medical diagnosis, etc. The most paramount of these challenges is the lack of rationale behind DNN predictions - making them notoriously a black-box in nature. In extreme cases, this can create a lack of alignment between the designer's intended behavior and the model's actual performance. In this talk, I will discuss our recent research on explainable deep learning, in particular, I will discuss the concept learning models and show how the concept-based learning models and example-based learning models can be designed for explainable deep tabular learning. I will also discuss their applications in biomedicine and healthcare.
+                                                            </p>
+                                                        <p>&nbsp;</p>
                                                     </div>
 
                                                 </div>
@@ -1827,17 +1827,17 @@
                                                         Professor, Department of Data Science, Dana-Farber Cancer
                                                         Institute <br>Professor, Channing Division of Network Medicine,
                                                         Brigham and Women’s Hospital</p>
-                                                    <div>&nbsp;</p>
+                                                    <div><p>&nbsp;</p>
                                                         <!-- <p><strong><span style="font-size: +2;">Title: TBA</span></strong>
                                                         </p>
                                                         <p><strong>Abstract</strong></p>
                                                         <p></p>
-                                                        <p>&nbsp;</p>
-
-                                                        <p><strong>Bio: TBA</strong></p>
-                                                        <p>
-                                                        </p>
                                                         <p>&nbsp;</p> -->
+
+                                                        <p><strong>Bio: </strong></p>
+                                                        <p>John Quackenbush is Professor of Computational Biology and Bioinformatics and Chair of the Department of Biostatistics at the Harvard TH Chan School of Public Health and Professor at the Dana-Farber Cancer Institute. John’s PhD was in Theoretical Physics but a fellowship to work on the Human Genome Project led him through the Salk Institute, Stanford University, and The Institute for Genomic Research (TIGR), before joining Harvard in 2005. John’s research uses massive data to probe how many small effects combine to influence our health and risk of disease. His published work has more than 97,000 citations and among his honors is recognition in 2013 as a White House Open Science Champion of Change. In 2012 he founded Genospace, a precision medicine software company that was sold to Hospital Corporation of America in 2017. In 2022, he was elected to the National Academy of Medicine.
+                                                        </p>
+                                                        <p>&nbsp;</p>
                                                     </div>
 
                                                 </div>
@@ -1883,15 +1883,16 @@
                                                     <p class="et_pb_member_position">Professor of Computer Science,
                                                         Stanford University</p>
                                                     <div>
+                                                        <p>&nbsp;</p>
                                                         <!-- <p>​</p>
                                                         <p><strong><span style="font-size: +2;">Title: TBA</span></strong></p>
                                                         <p><strong>Abstract</strong></p>
                                                         <p></p>
-                                                        <p>&nbsp;</p>
-                                                        <p><strong>Bio: TBA</strong></p>
-                                                        <p></p>
-                                                        <p>&nbsp;</p>
                                                         <p>&nbsp;</p> -->
+                                                        <p><strong>Bio:</strong></p>
+                                                        <p>Jure Leskovec is Professor of Computer Science at Stanford University. He is affiliated with the Stanford AI Lab, the Machine Learning Group and the Center for Research on Foundation Models. In thepast, he served as a Chief Scientist at Pinterest and was an investigator at Chan Zuckerberg BioHub.  Most recently, he co-founded machine learning startup Kumo.AI. Leskovec pioneered the field of Graph Neural Networks and created PyG, the most widely-used graph neural network library.Research from his group has been used by many countries to fight COVID-19 pandemic, and has been incorporated into products at Facebook, Pinterest, Uber, YouTube, Amazon, and more. His research received several awards including Microsoft Research Faculty Fellowship in 2011, Okawa Research award in2012, Alfred P. Sloan Fellowship in 2012, Lagrange Prize in 2015, ICDM Research Contributions Award in 2019, and ACM SIGKDD Innovation award in 2023. His research contributions have spanned social networks, data mining and machine learning, and computational biomedicine with the focus on drugdiscovery. His work has won 12 best paper awards and 5 10-year test of time awards at premier venues in these research areas. Leskovec received his bachelor's degree in computer science from University of Ljubljana, Slovenia, PhD in machine learning from Carnegie Mellon University and postdoctoraltraining at Cornell University.</p>
+                                                        <p>&nbsp;</p>
+                                                        <p>&nbsp;</p>
                                                     </div>
 
                                                 </div>
