--- a/workshops.html
+++ b/workshops.html
@@ -1842,8 +1842,8 @@
 														<li><a
 																href="https://cmhsm.my.canva.site/mhsm-workshop">MHSM 2025</a>: Mental Health Disorder Detection on Social
 															Media (MHSM 2025)</li>
-														<!-- <li><a href="https://ml4cyber.github.io/25/">MLC</a>: The
-															5th Machine Learning for Cybersecurity (MLC), 2025</li> -->
+														<li><a href="https://ml4cyber.github.io/25/">MLC</a>: The
+															5th Machine Learning for Cybersecurity (MLC), 2025</li>
 														<li><a href="https://icdmw25mmai.github.io/">MMAI 2025</a>:
 															5th IEEE International Workshop on Multimodal AI (MMAI
 															2025)</li>
