--- a/venue.html
+++ b/venue.html
@@ -1758,9 +1758,10 @@
                                                     <h4><strong>Conference Hotel </strong></h4>
                                                     
                                                     <p><strong>Capital Hilton</strong><br>1001 16th Street NW
-Washington, DC 20036, US</p>
+Washington, DC 20036, US<br><strong>Make a reservation at: </strong><a href="https://web.cvent.com/event/3feaa676-3a42-419d-8931-56a15b2e377f/websitePage:ecd6f604-dd9e-4122-a298-d1ada8a90281"
+                                                        target="_blank">https://web.cvent.com/event/3feaa676-3a42-419d-8931-56a15b2e377f/websitePage:ecd6f604-dd9e-4122-a298-d1ada8a90281</a>
 
-<br>
+<br><br>
                                                     <img width="1000" height="1000"
                                                                 src="images/hilton.png"
                                                                 alt="hilton" />
