--- a/venue.html
+++ b/venue.html
@@ -1634,7 +1634,7 @@
                             <a href="index.html" aria-current="page">Attending</a>
                             <ul class="sub-menu">
                                 
-                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                     <a href="registration.html"
                                         >
                                         Registration
@@ -1645,6 +1645,13 @@
                                     <a href="travel.html"
                                         >
                                         Travel to Washington, DC
+                                    </a>
+                                </li>
+
+                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                    <a href="venue.html"
+                                        >
+                                        Venue
                                     </a>
                                 </li>
 
@@ -1758,8 +1765,8 @@
                                                     <h4><strong>Conference Hotel </strong></h4>
                                                     
                                                     <p><strong>Capital Hilton</strong><br>1001 16th Street NW
-Washington, DC 20036, US<br><strong>Make a reservation at: </strong><a href="https://web.cvent.com/event/3feaa676-3a42-419d-8931-56a15b2e377f/websitePage:ecd6f604-dd9e-4122-a298-d1ada8a90281"
-                                                        target="_blank">https://web.cvent.com/event/3feaa676-3a42-419d-8931-56a15b2e377f/websitePage:ecd6f604-dd9e-4122-a298-d1ada8a90281</a>
+Washington, DC 20036, US<br><strong>Make a reservation at: </strong><a href="https://book.passkey.com/go/IEEE25"
+                                                        target="_blank">https://book.passkey.com/go/IEEE25</a>
 
 <br><br>
                                                     <img width="1000" height="1000"
