--- a/workshops.html
+++ b/workshops.html
@@ -1638,6 +1638,12 @@
 											Travel to Washington, DC
 										</a>
 									</li>
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="venue.html"
+                                            >
+                                            Venue
+                                        </a>
+                                    </li>
 								</ul>
 
 							</li>
