--- a/registration.html
+++ b/registration.html
@@ -1648,6 +1648,12 @@
                                     </a>
                                 </li>
 
+                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="venue.html"
+                                            >
+                                            Venue
+                                        </a>
+                                </li>
                             
                             </ul>
 
