--- a/keynotes.html
+++ b/keynotes.html
@@ -1767,7 +1767,7 @@
                                                     </a>
 
                                                     <p class="et_pb_member_position">Thomas M. Linville Professor<br>
-                                                        Computer Science, Biomedical Engineering, and Data Science</p>
+                                                        Computer Science, Biomedical Engineering, and Data Science<br>University of Virginia</p>
 
                                                     <div>
                                                         <p>&nbsp;</p>
@@ -1832,7 +1832,7 @@
                                                         and Bioinformatics, Harvard T.H. Chan School of Public Health<br>
                                                         Professor, Department of Data Science, Dana-Farber Cancer
                                                         Institute <br>Professor, Channing Division of Network Medicine,
-                                                        Brigham and Women’s Hospital</p>
+                                                        Brigham and Women’s Hospital<br>Havard University</p>
                                                     <div><p>&nbsp;</p>
                                                         <!-- <p><strong><span style="font-size: +2;">Title: TBA</span></strong>
                                                         </p>
@@ -1886,7 +1886,7 @@
                                                         <h4 class="et_pb_module_header">Jure Leskovec</h4>
                                                     </a>
 
-                                                    <p class="et_pb_member_position">Professor of Computer Science,
+                                                    <p class="et_pb_member_position">Professor of Computer Science<br>
                                                         Stanford University</p>
                                                     <div>
                                                         <p>&nbsp;</p>
