--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -3413,6 +3413,29 @@
                                             <div class="et_pb_column et_pb_column_1_3">
                                                 <div
                                                     class="et_pb_module et_pb_team_member et_pb_team_member_1 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
+                                                    <a href="https://www.linkedin.cn/incareer/in/linsey-pang-50590450/" target="_blank">
+                                                        <div
+                                                            class="et_pb_team_member_image et-waypoint et_pb_animation_off">
+                                                            <img width="500" height="500"
+                                                                src="images/oc/Linsey Pang.jpeg"
+                                                                alt="Chang-Tien Lu" class="wp-image-633" />
+                                                        </div>
+                                                    </a>
+
+                                                    <div class="et_pb_team_member_description">
+                                                        <h4 class="et_pb_module_header"><a
+                                                                href="https://www.linkedin.cn/incareer/in/linsey-pang-50590450/"
+                                                                target="_blank">Linsey Pang</h4>
+                                                        <div>
+                                                            <p>Salesforce, USA</p>
+                                                        </div></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="et_pb_column et_pb_column_1_3">
+                                                <div
+                                                    class="et_pb_module et_pb_team_member et_pb_team_member_1 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
                                                     <a href="https://profiles.uts.edu.au/Ling.Chen" target="_blank">
                                                         <div
                                                             class="et_pb_team_member_image et-waypoint et_pb_animation_off">
