--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -3427,7 +3427,7 @@
                                                                 href="https://www.linkedin.com/in/linsey-pang-50590450/"
                                                                 target="_blank">Linsey Pang</h4>
                                                         <div>
-                                                            <p>Salesforce, USA</p>
+                                                            <p>PayPal, USA</p>
                                                         </div></a>
                                                     </div>
                                                 </div>
