--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -3744,7 +3744,7 @@
                                                                 target="_blank">Kunpeng Liu</h4>
 
                                                         <div>
-                                                            <p>Portland State Universityh</p>
+                                                            <p>Clemson University</p>
                                                         </div></a>
 
                                                     </div>
