--- a/keydates.html
+++ b/keydates.html
@@ -1756,32 +1756,32 @@
 													<h4><strong>Main conference</strong></h4>
 													<ul>
 
-														<li>Full paper submissions: June 6, 2025</li>
-														<li>Notifications to authors: August 25, 2025</li>
-														<li>Camera ready: September 25, 2025</li>
+														<li>Full paper submissions: <del>Friday, June 6, 2025</del></li>
+														<li>Notifications to authors: Monday, August 25, 2025</li>
+														<li>Camera ready: Thursday, September 25, 2025</li>
 													</ul>
 
 													<h4><strong>Workshops</strong></h4>
 													<ul>
 
-														<li>March 14, 2025: Workshop proposals deadline</li>
-														<li>April 11, 2025: Workshop proposals notification</li>
-														<li>September 1, 2025: Workshop paper submission deadline</li>
-														<li>Camera ready: September 25, 2025</li>
+														<li>Workshop proposals deadline: <del>Friday, March 14, 2025</del></li>
+														<li>Workshop proposals notification: <del>Monday, April 11, 2025</del></li>
+														<li>Workshop paper submission deadline: Monday, September 1, 2025</li>
+														<li>Camera ready: Thursday, September 25, 2025</li>
 													</ul>
 
 													<h4><strong>Tutorials</strong></h4>
 													<ul>
 
-														<li>Tutorial proposal due: September 5, 2025</li>
-														<li>Notification: September 26, 2025</li>
+														<li>Tutorial proposal due: Friday, September 5, 2025</li>
+														<li>Notification: Friday, September 26, 2025</li>
 
 													</ul>
 
 													<h4><strong>Demonstrations</strong></h4>
 													<ul>
 
-														<li>Demo paper submission: Friday, September 05, 2025</li>
+														<li>Demo paper submission: Friday, September 5, 2025</li>
 														<li>Notification to authors: Friday, September 26, 2025</li>
 													</ul>
 
@@ -1789,25 +1789,25 @@
 													<ul>
 
 														<li>Paper submission due date: Monday, September 1, 2025</li>
-														<li>Decision notification: October 1, 2025</li>
-														<li>Camera-ready due date: October 15, 2025</li>
+														<li>Decision notification: Friday, September 19, 2025</li>
+														<li>Camera-ready due date: Wednesday, October 15, 2025</li>
 														<li>Symposium: one day in November 12-15, 2025</li>
 													</ul>
 
 													<h4><strong>Undergraduate and High School Symposium</strong></h4>
 													<ul>
 
-														<li>Paper Submission Deadline: Sep 1, 2025 11:59 PM AoE</li>
-														<li>Notification of Acceptance: Oct 1, 2025</li>
-														<li>Camera-Ready Paper Submission: Oct 15, 2025</li>
+														<li>Paper Submission Deadline: Monday, September 1, 2025 11:59 PM AoE</li>
+														<li>Notification of Acceptance: Wednesday, October 1, 2025</li>
+														<li>Camera-Ready Paper Submission: Wednesday, October 15, 2025</li>
 
 													</ul>
 
 													<h4><strong>Hotel</strong></h4>
-													<p>Important Dates:</p>
+													<!-- <p>Important Dates:</p> -->
 													
 													<ul>
-														<li> Room Block Cut-Off Date is October 18, 2025. </li>
+														<li> Room Block Cut-Off Date: Saturday, October 18, 2025</li>
 														
 													</ul>
 													<p><a href="https://book.passkey.com/go/IEEE25"
