--- a/cft.html
+++ b/cft.html
@@ -1829,8 +1829,8 @@
 
                                                     <h4><strong>Important Dates</strong></h4>
 
-                                                    <li>Tutorial proposal due: 05 September 2025</li>
-                                                    <li>Notification: 26 September 2025</li>
+                                                    <li>Tutorial proposal due: Friday, September 05, 2025</li>
+                                                    <li>Notification: Friday, September 19, 2025</li>
 
                                                     <p>All deadlines are at 11:59 PM AOE time.</p>
 
