--- a/travel.html
+++ b/travel.html
@@ -1811,7 +1811,7 @@
                                                     <p>
                                                         Washington, DC, is a well-connected city with multiple options
                                                         for travel and transit. Here is detailed information for
-                                                        attendees on reaching the Convention Center from various entry
+                                                        attendees on reaching the Conference Venue from various entry
                                                         points, along with guidance for navigating the city.
                                                     </p>
 
@@ -1847,14 +1847,14 @@
                                                     <p>
                                                         <li>From Ronald Reagan Washington National Airport (DCA):
                                                             Located closest to the city, DCA is just
-                                                            5 miles from the Convention Center. The quickest option is
+                                                            5 miles from the Conference Venue. The quickest option is
                                                             to take a ride-share service like Uber
                                                             or Lyft directly to your destination. Alternatively, you may
                                                             opt for the Metro's Blue Line. From the
                                                             airport's Track 1 platform, board the Blue Line train toward
                                                             LARGO and disembark at the Federal
                                                             Triangle station, which is a short 10-minute walk to the
-                                                            Convention Center. For more transit
+                                                            Conference Venue. For more transit
                                                             options, please consult <a href="https://www.rome2rio.com/map/Reagan-Washington-Airport-DCA/Hyatt-Regency-Washington-on-Capitol-Hill#trips"
                                                             target="_blank">here</a>. </li>
                                                         <li>From Washington Dulles International Airport (IAD):
@@ -1863,7 +1863,7 @@
                                                             Metro, board the Silver Line from the
                                                             airport's center platform toward LARGO and alight at the
                                                             Federal Triangle station, approximately
-                                                            one mile from the Convention Center. For bus service,
+                                                            one mile from the Conference Venue. For bus service,
                                                             Megabus provides a convenient route to
                                                             Washington Union Station, a major transit hub located a
                                                             7-minute walk from the venue. Note that
@@ -1880,7 +1880,7 @@
                                                             the BWI MARC station. From there,
                                                             you may board either MARC or Amtrak trains heading to
                                                             Washington's Union Station, which is
-                                                            just an 8-minute walk from the Convention Center. [For more
+                                                            just an 8-minute walk from the Conference Venue. [For more
                                                             details on transit options, see <a href="https://www.rome2rio.com/map/Baltimore-Airport-BWI/Hyatt-Regency-Washington-on-Capitol-Hill?search=Baltimore-Airport-BWI,Hyatt-Regency-Washington-on-Capitol-Hill#trips"
                                                             target="_blank">here</a>. 
                                                             ]</li>
@@ -1910,7 +1910,7 @@ that connect to Amtrak and other routes to DC.
                                                         <a
                                                         href="https://washington.org/find-dc-listings/battles-transportation" target="_blank">Battle's Transportation</a>, and <a
                                                         href="https://washington.org/find-dc-listings/vamoose-bus" target="_blank">Vamoose</a>. Most buses arrive at central locations with Metro and other 
-                                                        transportation options readily available to connect you to the Convention Center. More information on 
+                                                        transportation options readily available to connect you to the Conference Venue. More information on 
                                                         additional options: </p>
                                                     <p><a
                                                         href="https://washington.org/DC-guide-to/getting-to-washington-dc" target="_blank">Getting to Washington DC</a></p>
