--- a/keydates.html
+++ b/keydates.html
@@ -1567,6 +1567,14 @@
                                     </li>
 
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="https://www.cse.fau.edu/~xqzhu/taoliaward/icdm-tao-li-award.html"
+                                            style="display: block; min-width: 350px; padding: 10px 20px;"
+                                            target="_blank">
+                                            Call for ICDM 2025 Tao Li Award
+                                        </a>
+                                    </li>
+
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
 										<a href="https://bigdatareu.umbc.edu/reu-symposium/reu-symposium-2025/"
 										   style="display: block; min-width: 350px; padding: 10px 20px;" target="_blank">
 											REU Symposium 2025
